-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.1
-
None
-
Built on Windows 10 using Qt Creator 4.8.1.
Built for Android (target 28) using:
- Qt: 5.12.1
- SDK: 26.1.1
- NDK: 18.1.5063045
- JDK: 1.8.0_192
- Compiler: Clang
Played back:
- Debug
- Release
Tried on:
> Xiaomi RedmiX with Android 7.1.2
> Google Pixel 2 with Android 9.0
> Nexus 6 with Android 7.1.1Built on Windows 10 using Qt Creator 4.8.1. Built for Android (target 28) using: - Qt: 5.12.1 - SDK: 26.1.1 - NDK: 18.1.5063045 - JDK: 1.8.0_192 - Compiler: Clang Played back: - Debug - Release Tried on: > Xiaomi RedmiX with Android 7.1.2 > Google Pixel 2 with Android 9.0 > Nexus 6 with Android 7.1.1
-
-
9ca81260e9293f6ef9a8e8da08eda7bdbdb90a7d (qt/qtbase/5.12)
Steps:
- Start application.
- Click on the TextField for opening the native Android keyboard.
- Close the native Android keyboard.
- Swipe on page 2 "Open Camera".
- Click the button "Camera".
- Choose something in request camera permission dialogue and watch on the application output, you see written below.
- The second time this sequence doesn't reproduce the problem, because we don't have camera permission dialogue.
Similar bug:
Application output:
The Nexus 6
W linker : /data/data/org.qtproject.example.CameraTest/qt-reserved-files/qml/QtMultimedia/libdeclarative_multimedia.so: unsupported flags DT_FLAGS_1=0x80
I art : Thread[3,tid=27264,WaitingInMainSignalCatcherLoop,Thread*=0xa3044800,peer=0x12c54280,"Signal Catcher"]: reacting to signal 3
02-26 11:40:42.267 27258 27264 I art :
I art : Wrote stack traces to '/data/anr/traces.txt'
"org.qtproject.example.CameraTest" died.
The Xiaomi RedmiX
W linker : /data/data/org.qtproject.example.CameraTest/qt-reserved-files/qml/QtMultimedia/libdeclarative_multimedia.so: unsupported flags DT_FLAGS_1=0x80
I Timeline: Timeline: Activity_launch_request time:72627577 intent:Intent { act=android.content.pm.action.REQUEST_PERMISSIONS pkg=com.google.android.packageinstaller (has extras) }
I art : Thread[3,tid=3603,WaitingInMainSignalCatcherLoop,Thread*=0xe5a8dd00,peer=0x12c355e0,"Signal Catcher"]: reacting to signal 3
02-26 12:21:51.645 3594 3603 I art :
I art : Wrote stack traces to '/data/anr/traces.txt'
"org.qtproject.example.CameraTest" died.
The Google Pixel 2
W linker : Warning: "/data/data/org.qtproject.example.CameraTest/qt-reserved-files/qml/QtMultimedia/libdeclarative_multimedia.so" has unsupported flags DT_FLAGS_1=0x80 (ignoring unsupported flags)
I mple.CameraTes: Thread[3,tid=18351,WaitingInMainSignalCatcherLoop,Thread*=0xf2ec8c00,peer=0x12d00098,"Signal Catcher"]: reacting to signal 3
02-26 12:25:48.661 18345 18351 I mple.CameraTes:
I mple.CameraTes: Wrote stack traces to '[tombstoned]'
"org.qtproject.example.CameraTest" died.